# penage

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt
.github/workflows/: tests.yml
compose/: e2e_dvwa.yml
docker/sandbox/: Dockerfile
docs/: architecture.md  architecture.ru.md  roadmap.md  user-guide.md  user-guide.ru.md
docs/design/: e2e_dvwa.md  e2e_dvwa_scenarios.md  gate_routing_specialist_phases.md
docs/papers/: awe.md  cai.md  mapta.md
docs/roadmap/: stage5.md
penage/agents/: __init__.py  base.py  coordinator.py  sandbox.py  validation.py
penage/app/: bootstrap.py  config.py  runtime_factory.py  summary.py
penage/cli/: run_one.py
penage/contracts/: http.py  plan.py
penage/core/: action_tracking.py  actions.py  candidates.py  errors.py  form_assist.py  guard.py  observation_state.py  observations.py  orchestrator.py  planner.py  planner_context.py  rate_limit.py  research_state.py  state.py  state_helpers.py  state_updates.py  tracer.py  url_guard.py  usage.py  validation_recorder.py
penage/llm/: anthropic.py  base.py  fake.py  json_robust.py  ollama.py  openai.py  role_tagged.py
penage/macros/: base.py  follow_authenticated_branch.py  probe_resource_family.py  probe_support.py  replay_auth_session.py
penage/memory/: __init__.py  schema.sql  store.py
penage/payloads/: cmdinj.yaml  lfi.yaml  sqli.yaml  ssrf.yaml  ssti.yaml  xss.yaml  xxe.yaml
penage/policy/: base.py  gctr_lite.py  helpers.py  ranking.py  scoring.py  selection.py
penage/prompts/: coordinator.md  loader.py  sandbox.md  validation.md
penage/sandbox/: base.py  browser_base.py  docker.py  executor.py  fake_browser.py  null.py  playwright_browser.py
penage/specialists/: auth_session_confusion.py  base.py  curl_recon.py  login_workflow.py  manager.py  navigator.py  pipeline.py  proposal_runner.py  research.py  research_llm.py  sandbox_smoke.py  sqli.py  xss.py
penage/tools/: curl_http_tool.py  http_backend.py  http_support.py  http_tool.py  runner.py  sandbox_tool.py  shell_tool.py
penage/utils/: fingerprint.py  html_forms.py  html_paths.py  jsonx.py
penage/validation/: __init__.py  base.py  browser.py  candidate.py  gate.py  http.py  validator_lite.py  verdict.py
scripts/: smoke_chromium.py
tests/: conftest.py
tests/integration/: e2e_helpers.py  test_e2e_ablation.py  test_e2e_safe_http.py  test_e2e_sandboxed.py  test_playwright_browser.py  test_validation_gate.py  test_xss_dvwa.py  test_xss_through_gate.py
tests/support/: dvwa_auth.py  e2e_config.py  golden_trace.py  xss_fakes.py
tests/unit/: test_browser_verifier.py  test_filter_inferrer.py  test_payload_mutator.py  test_reflection_analyzer.py  test_sqli_specialist.py  test_ssti_specialist.py  test_xss_specialist.py
(+98 files in other folders)
