[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "penage"
version = "0.1.0"
description = "Agent-style runtime for authorized web security labs and CTF targets"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "N.Chuev" }
]
dependencies = [
  "aiohttp>=3.9,<4.0",
  "httpx>=0.27,<1.0",
  "pyyaml>=6.0,<7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-asyncio>=0.23,<1.0",
]
llm = [
  "anthropic>=0.40,<1.0",
  "openai>=1.50,<3.0",
]
# Playwright pin policy: the Python package ships its own bundled browser
# revisions and the API contract is stable across 1.x; we cap at <2.0 so a
# future 2.x bundle swap requires explicit revalidation of the E2E trio.
# Chromium itself is NOT installed as a Python dependency — after installing
# the ``browser`` extra, run ``playwright install chromium`` to fetch the
# matching browser binary. Bumping the pin requires re-running
# ``playwright install chromium`` and revalidating browser-verified XSS
# findings (see ``docs/roadmap/stage5.md`` §6.2).
browser = [
  "playwright>=1.40,<2.0",
]

[tool.setuptools.packages.find]
include = ["penage*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
